ho aggiunto immagini e ho modificato le icone.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,11 @@
         android:id="@+id/navigation_dashboard"
         android:name="dev.vincenzocostagliola.setupyourfridge.ui.dashboard.DashboardFragment"
         android:label="@string/title_search"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard"/>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="dev.vincenzocostagliola.setupyourfridge.ui.notifications.NotificationsFragment"
-        android:label="@string/title_profile"
+        android:label="@string/title_search"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
